Bug 688390 - Crashes with a GPF using the parameter "-dConvertCMYKImagesToRGB=true"
Summary: Crashes with a GPF using the parameter "-dConvertCMYKImagesToRGB=true"
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 8.53
Hardware: PC Windows XP
: P3 critical
Assignee: leonardo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-11-18 04:52 UTC by Frank Heindörfer
Modified: 2008-12-19 08:31 UTC (History)
2 users (show)

See Also:
Customer:
Word Size: ---


Attachments
Test files to reproduce the described behaviour (5.94 KB, application/octet-stream)
2005-11-18 04:56 UTC, Frank Heindörfer
Details
patch (1.08 KB, patch)
2005-11-22 19:51 UTC, Alex Cherepanov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Heindörfer 2005-11-18 04:52:40 UTC
Ghostscript crashes with a GPF. Tested on different Windows systems on different
machines.

To reproduce this behaviour do this (on a WinXP-SP2): 
1.) Open paint.
2.) Go to image/setting and choose for colors black/white.
3.) Print it with the adobe postscript printer driver in a postscript file.
4.) Convert this postscript file to a pdf file with this parameter file.
-IC:\GS8.53\gs8.53\Lib\;C:\Gs8.53\Fonts\;C:\GS8.53\gs8.53\Resource\
-q
-dNOPAUSE
-dSAFER
-dBATCH
-sDEVICE=pdfwrite
-dCompatibilityLevel=1.3
-r600x600
-dConvertCMYKImagesToRGB=true
-sOutputFile=crash.pdf
-f
test.ps

5.) AFPL Ghostscript 8.51, 8.52, 8.53 crashes. The problem is the parameter
-dConvertCMYKImagesToRGB=true

This doesn't happen with AFPL Ghostscript 8.50 or GPL Ghostscript 8.15.

Test files (postscript file and parameter file) are available. Send me an email
if this is necessary.

Best regards,
Frank
Comment 1 Frank Heindörfer 2005-11-18 04:56:42 UTC
Created attachment 1784 [details]
Test files to reproduce the described behaviour

With these files you can reproduce the described behaviour.
Comment 2 Alex Cherepanov 2005-11-22 19:51:05 UTC
Created attachment 1795 [details]
patch

Fix a SEGV in ps2pdf conversion of imagemask with -dConvertCMYKImagesToRGB=true

flag introduced in v.1.62 with the simplified logic.
Comment 3 Alex Cherepanov 2005-11-22 19:55:37 UTC
Leonardo, please take a look at the proposed fix.
Comment 4 leonardo 2005-11-25 03:44:33 UTC
Alex,

The patch is good, please commit and close the bug.
Comment 5 Alex Cherepanov 2005-11-25 07:03:45 UTC
The patch is committed.