Fix a SEGV in ps2pdf conversion of imagemask when -dConvertCMYKImagesToRGB=true Fix bug 688390

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@6197 a1074d23-0009-0410-80fe-cf8c14f379e6